--- a/style/index.css
+++ b/style/index.css
@@ -552,7 +552,13 @@ input[type="file"] {
 position: relative;
 left: 67.5px;
 bottom: 12px;
-width: 50px;
+width: 70px;
+}
+
+.submitUploadScreen
+{
+  width: 100px;
+  height:50px;
 }
 
 /*----------------About.php---------------------*/
