--- a/style/index.css
+++ b/style/index.css
@@ -12,10 +12,6 @@ button:hover {
   cursor: pointer;
 }
 
-html {
-  overflow-x: hidden;
-}
-
 a
 {
     color: var(--Red);
@@ -436,10 +432,10 @@ body
 
 .uploadSubmit {
   position: relative;
-  width: 150;
-  height: 75;
-  background-color: var(--Black);
-  border: solid var(--Orange);
+  width: 300px;
+  height: 150px;
+  background-color: black;
+  border: solid var(#be0032);
   border-radius: var(--Radius);
   color: white;
 }
@@ -576,7 +572,7 @@ width: 70px;
   float: bottom;
   width: 60px;
   height: 60px;
-  margin: 0,0,5%,5%;
+  margin: 50%,0,3%,3%;
 }
 
 /*----------------About.php---------------------*/
