--- a/style/index.css
+++ b/style/index.css
@@ -572,7 +572,7 @@ width: 70px;
   float: bottom;
   width: 60px;
   height: 60px;
-  margin: 50%,0,3%,3%;
+  margin: 0%,50%,3%,3%;
 }
 
 /*----------------About.php---------------------*/
