--- a/style/index.css
+++ b/style/index.css
@@ -402,8 +402,8 @@ body
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 600px;
-    height: 500px;
+    width: 15%;
+    height: 35%;
     border: solid var(--Red);
     border-radius: var(--aboutRadius);
     display: flex;
@@ -568,11 +568,9 @@ width: 70px;
 }
 .size
 {
-  position: relative;
-  width: 60px;
-  height: 60px;
-  top: 72.5%;
-  left: 67.5%;
+  position: absolute;
+  top: 90%;
+  left: 90%;
 }
 
 /*----------------About.php---------------------*/
