--- a/style/index.css
+++ b/style/index.css
@@ -441,13 +441,20 @@ body
 }
 
 input[type="file"] {
-    /* display: none; */
+    display: none;
 }
 
-.custom-file-upload {
-    display: inline-block;
-    padding: 6px 12px;
-    cursor: pointer;
+#inputLabel{
+  cursor:pointer;
+}
+#inputFileName{
+  color:green;
+}
+
+#inputDiv{
+  text-align:center;
+  padding:3%;
+  border:thin solid black;
 }
 .public-Container
 {
