--- a/style/index.css
+++ b/style/index.css
@@ -86,22 +86,22 @@ body
   /*------------------Tooltips------------------*/
 
   /* The switch - the box around the slider */
-/*.switch {
+/* .switch {
     position: relative;
     display: inline-block;
     width: 60px;
     height: 34px;
-  }
+  } */
   
   /* Hide default HTML checkbox */
-  .switch input {
+  /* .switch input {
     opacity: 0;
     width: 0;
     height: 0;
-  }
+  } */
   
   /* The slider */
-  .slider {
+  /* .slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -138,9 +138,9 @@ body
     -ms-transform: translateX(26px);
     transform: translateX(26px);
   }
-  
+   */
   /* Rounded sliders */
-  .slider.round {
+  /* .slider.round {
     border-radius: 34px;
   }
   
