--- a/style/index.css
+++ b/style/index.css
@@ -1106,7 +1106,8 @@ margin-top: 1px;
   cursor: pointer;
   position: relative;
   -webkit-tap-highlight-color: transparent;
-  display: flex;
+  left: 40%;
+  top: 15px;
 }
 .checkbox svg {
   display: block;
@@ -1178,4 +1179,9 @@ margin-top: 1px;
 }
 *:before, *:after {
   box-sizing: inherit;
+}
+.bonggus
+{
+  position: relative;
+  left: 45%;
 }
