--- a/style/index.css
+++ b/style/index.css
@@ -339,8 +339,8 @@ body
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 15%;
-    height: 37.5%;
+    width: 219.87px;
+    height: 357.87px;
     border: solid var(--Red);
     border-radius: var(--aboutRadius);
 }
@@ -462,6 +462,7 @@ input[type="file"] {
 .publicFileTitle, .publicFileDate, .publicFileSize
 {
     color: white;
+    width: 300px;
 }
 
 .shareButton
