Co-authored-by: Lobster <lobsterssss@users.noreply.github.com> Co-authored-by: TwigDemonTF <TwigDemonTF@users.noreply.github.com>

--- a/style/index.css
+++ b/style/index.css
@@ -515,6 +515,10 @@ width: 70px;
   top: 90%;
   left: 90%;
 }
+.rounding 
+{
+  border-top-right-radius: ;
+}
 
 /*----------------About.php---------------------*/
 #altBorder{
