--- a/style/index.css
+++ b/style/index.css
@@ -574,16 +574,14 @@ margin-right: 2%;
 }
 
 .card {
-    margin-left: 50px;
-    margin-top: 50px;
-    margin-bottom: 100px;
-    width: 120%;
-    height: 10%;
-    padding: 5px 30px 30px 30px;
-    border: 6px solid rgba(0, 0, 0, 0.3);
-    box-shadow: 20px 20px 0 rgba(0, 0, 0, 0.3);
-    border-radius: 50px;
-    position: relative;
+  margin-left: 50px;
+  margin-top: 50px;
+  margin-bottom: 100px;
+  width: 120%;
+  padding: 5px 30px 0px 30px;
+  border: 6px solid rgba(0, 0, 0, 0.3);
+  box-shadow: 20px 20px 0 rgb(0 0 0 / 30%);
+  border-radius: 50px;
   }
 
 .card h2 {
@@ -592,20 +590,18 @@ margin-right: 2%;
   text-transform: uppercase;
   color: white;
 }
+.mbox
+{
+  width: 415px;
+  height: 76px;
+}
 
 .card .row {
-  position: relative;
   width: 100%;
-  display: grid;
-  grid: auto / auto auto;
-  grid-template-columns: repeat(auto-fit,minmax(40%, 1fr));
-  grid-gap: 30px;
 }
 
 .card .row .col {
-  position: relative;
-  width: 100%;
-  margin: 30px 20px 40px 0;
+  margin: 0px 20px 60px 0px;
   transition: 0.5s;
 }
 
@@ -641,7 +637,7 @@ margin-right: 2%;
 }
 
 .row .col:nth-child(6) {
-  margin-top: 64px;
+  margin-top: 120px;
 }
 
 .card .row .form-group input:focus,
