--- a/style/index.css
+++ b/style/index.css
@@ -333,6 +333,7 @@ body
 
 /*------------------Public.php || Private.php------------------*/
 .uploadDate {
+  font-size: 20px;
   position: absolute;
   z-index: 2;
   left: 400px;
