--- a/style/index.css
+++ b/style/index.css
@@ -42,7 +42,7 @@ body
     background-color: var(--Orange);
 }
 
-/*------------------Tooltips------------------*/
+/* Tooltips */
 
 .tooltip {
     position: relative;
@@ -83,7 +83,7 @@ body
     opacity: 1;
   }
 
-  /*------------------Tooltips------------------*/
+
 
 /* nav */
 
@@ -282,6 +282,9 @@ body
     margin: 0px;
     width: 250px;
     height: auto;
+}
+.pointer{
+  cursor: pointer;
 }
 
 /*------------------index.php------------------*/
@@ -526,7 +529,104 @@ input[type="file"] {
   top: 90%;
   left: 87%;
 }
+.checkbox2
+{
+margin-top: 1px;
+display: flex;
+}
+.checkbox {
+  --border-default: #bbbbc1;
+  --border-hover: #9898a3;
+  --active: var(--Orange);
+  --active-tick: #fff;
+  display: block;
+  cursor: pointer;
+  position: relative;
+  -webkit-tap-highlight-color: transparent;
+  left: 37.5%;
+  top: 15px;
+}
+.checkbox svg {
+  display: block;
+  position: absolute;
+}
+.checkbox input {
+  display: block;
+  outline: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  -webkit-appearance: none;
+  width: 18px;
+  height: 18px;
+  border-radius: 36% / 36%;
+  box-shadow: inset 0 0 0 1.5px var(--border, var(--border-default));
+  background: var(--background, transparent);
+  transition: background 0.25s linear, box-shadow 0.25s linear;
+}
+.checkbox input + svg {
+  width: 21px;
+  height: 18px;
+  left: 0;
+  top: 0;
+  color: var(--active);
+}
+.checkbox input + svg .tick {
+  stroke-dasharray: 20;
+  stroke-dashoffset: var(--stroke-dashoffset, 20);
+  transition: stroke-dashoffset 0.2s;
+}
+.checkbox input + svg .tick.mask {
+  stroke: var(--active-tick);
+}
+.checkbox input + svg + svg {
+  width: 11px;
+  height: 11px;
+  fill: none;
+  stroke: var(--active);
+  stroke-width: 1.25;
+  stroke-linecap: round;
+  top: -6px;
+  right: -10px;
+  stroke-dasharray: 4.5px;
+  stroke-dashoffset: 13.5px;
+  pointer-events: none;
+  animation: var(--animation, none) 0.2s ease 0.175s;
+}
+.checkbox input:checked {
+  --background: var(--active);
+  --border: var(--active);
+}
+.checkbox input:checked + svg {
+  --stroke-dashoffset: 0;
+}
+.checkbox input:checked + svg + svg {
+  --animation: check;
+}
+.checkbox:hover input:not(:checked) {
+  --border: var(--border-hover);
+}
+@keyframes check {
+  100% {
+    stroke-dashoffset: 4.5px;
+ }
+}
+* {
+  box-sizing: inherit;
+}
+*:before, *:after {
+  box-sizing: inherit;
+}
+.checkText
+{
+  position: relative;
+  left: 42.5%;
+}
 
+.dateInputDiv {
+  display: inline-flex;
+  justify-content: space-between;
+}
 
 /*----------------About.php---------------------*/
 #altBorder{
@@ -725,9 +825,7 @@ margin-right: 2%;
 .filterHead{
     text-align: center;
 }
-.pointer{
-    cursor: pointer;
-}
+
 
 /*-------------------------------------Home.php Extra's-------------------------------*/
 .wingLeft {
@@ -1098,97 +1196,4 @@ margin-right: 2%;
     transform: rotate(95deg) translateY(40px);
   }
 } */
-/* -------------------------- test -------------------------- */
-.checkbox2
-{
-margin-top: 1px;
-display: flex;
-}
-.checkbox {
-  --border-default: #bbbbc1;
-  --border-hover: #9898a3;
-  --active: var(--Orange);
-  --active-tick: #fff;
-  display: block;
-  cursor: pointer;
-  position: relative;
-  -webkit-tap-highlight-color: transparent;
-  left: 37.5%;
-  top: 15px;
-}
-.checkbox svg {
-  display: block;
-  position: absolute;
-}
-.checkbox input {
-  display: block;
-  outline: none;
-  border: none;
-  padding: 0;
-  margin: 0;
-  -webkit-appearance: none;
-  width: 18px;
-  height: 18px;
-  border-radius: 36% / 36%;
-  box-shadow: inset 0 0 0 1.5px var(--border, var(--border-default));
-  background: var(--background, transparent);
-  transition: background 0.25s linear, box-shadow 0.25s linear;
-}
-.checkbox input + svg {
-  width: 21px;
-  height: 18px;
-  left: 0;
-  top: 0;
-  color: var(--active);
-}
-.checkbox input + svg .tick {
-  stroke-dasharray: 20;
-  stroke-dashoffset: var(--stroke-dashoffset, 20);
-  transition: stroke-dashoffset 0.2s;
-}
-.checkbox input + svg .tick.mask {
-  stroke: var(--active-tick);
-}
-.checkbox input + svg + svg {
-  width: 11px;
-  height: 11px;
-  fill: none;
-  stroke: var(--active);
-  stroke-width: 1.25;
-  stroke-linecap: round;
-  top: -6px;
-  right: -10px;
-  stroke-dasharray: 4.5px;
-  stroke-dashoffset: 13.5px;
-  pointer-events: none;
-  animation: var(--animation, none) 0.2s ease 0.175s;
-}
-.checkbox input:checked {
-  --background: var(--active);
-  --border: var(--active);
-}
-.checkbox input:checked + svg {
-  --stroke-dashoffset: 0;
-}
-.checkbox input:checked + svg + svg {
-  --animation: check;
-}
-.checkbox:hover input:not(:checked) {
-  --border: var(--border-hover);
-}
-@keyframes check {
-  100% {
-    stroke-dashoffset: 4.5px;
- }
-}
-* {
-  box-sizing: inherit;
-}
-*:before, *:after {
-  box-sizing: inherit;
-}
-.bonggus
-{
-  position: relative;
-  left: 42.5%;
-}
+
