--- a/style/index.css
+++ b/style/index.css
@@ -357,8 +357,7 @@ body
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: fit-content;
-    height: 357.87px;
+    width: 300px;
     border: solid var(--Red);
     border-radius: var(--aboutRadius);
 }
@@ -391,6 +390,7 @@ body
   border: solid var(#be0032);
   border-radius: var(--Radius);
   color: white;
+  margin-bottom: 10px;
 }
 
 input[type="file"] {
@@ -405,9 +405,13 @@ input[type="file"] {
 }
 
 #inputDiv{
-  text-align:center;
-  padding:3%;
-  border:thin solid black;
+  text-align: center;
+  padding: 3%;
+  border: thin solid black;
+  width: 280px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .public-Container
 {
@@ -527,7 +531,7 @@ input[type="file"] {
 {
   position: absolute;
   top: 5px;
-  left: 165px;
+  left: 272px;
 }
 .checkbox2
 {
