Co-authored-by: Lobster <lobsterssss@users.noreply.github.com> Co-authored-by: TwigDemonTF <TwigDemonTF@users.noreply.github.com>

--- a/style/index.css
+++ b/style/index.css
@@ -345,9 +345,9 @@ body
 
 .fileSize {
   position: absolute;
-  z-index: 2;
-  left: 450px;
-  top: 100px;
+  left: 78%;
+  top: 18%;
+  color: white;
 }
 .uploadDiv{
     position: absolute;
