--- a/style/index.css
+++ b/style/index.css
@@ -848,6 +848,10 @@ margin-right: 2%;
   transform: rotateY(180deg) translate(-50%, -50%);
 }
 
+.wingContainer {
+  width: 50px;
+}
+
 .feather {
   height: 100px;
   width: 20px;
