--- a/style/index.css
+++ b/style/index.css
@@ -487,6 +487,11 @@ input[type="file"] {
   filter: brightness(120%);
 }
 
+publicItem:first-child
+{
+  border-top-left-radius: 10px;
+}
+
 .publicFileTitle, .publicFileDate, .publicFileSize
 {
     color: white;
