Co-authored-by: Lobster <lobsterssss@users.noreply.github.com> Co-authored-by: TwigDemonTF <TwigDemonTF@users.noreply.github.com>

--- a/style/index.css
+++ b/style/index.css
@@ -1220,3 +1220,9 @@ margin-right: 2%;
   }
 } */
 
+/*-------------------------------------SharePage.php-------------------------------*/
+
+#smaller
+{
+  
+}
