--- a/style/index.css
+++ b/style/index.css
@@ -1226,3 +1226,13 @@ margin-right: 2%;
 {
   height: 70vh;
 }
+.sharePageBtn
+{
+  color: var(--Black);
+  border: solid var(--Red);
+  border-radius: 10px;
+  width: 130px;
+  height: 40px;
+  margin-left: 100px;
+  cursor: pointer;
+}
