--- a/style/index.css
+++ b/style/index.css
@@ -1226,10 +1226,27 @@ margin-right: 2%;
 {
   display: flex;
   width: fit-content;
-  height:85vh;
-
+  height:80vh;
 }
-
+.sharePageLogo
+{
+  padding-left: 1em;
+  padding-right: 1em;
+  text-decoration: none;
+  float: left;
+  background-color: #202124;
+  color: white;
+height: 80px;
+  font-family: Readex Pro;
+  -webkit-transition: background-color 0.5s ease-out;
+  -moz-transition: background-color 0.5s ease-out;
+  -o-transition: background-color 0.5s ease-out;
+  transition: background-color 0.5s ease-out;
+}
+.sharePageLogo:hover
+{
+  background-color: #171717;
+}
 .sharePageBtn
 {
   color: var(--Black);
@@ -1243,5 +1260,4 @@ margin-right: 2%;
 .DarkContainer
 {
 border: #1c1c1f;
-
 }
