--- a/style/index.css
+++ b/style/index.css
@@ -1254,7 +1254,7 @@ margin-right: 2%;
   background: var(--Black);
 }
 
-.sharePageLogo
+.sharePageHref
 {
   padding-left: 1em;
   padding-right: 1em;
