--- a/style/index.css
+++ b/style/index.css
@@ -1244,18 +1244,19 @@ margin-right: 2%;
 .M 
 {
   grid-area: M;
-  height:500px
+  height:500px;
+  display: flex;
 }
 
 .fileInfo
 {
-  width: 1fr;
+  height: 100%;
   border: solid blue;
 }
 
 .filePreview 
 {
-  width: 1fr;
+  height: 100%;
   border: solid red;
 }
 
