--- a/style/index.css
+++ b/style/index.css
@@ -1273,6 +1273,12 @@ margin-right: 2%;
   margin-left: 20px;
 }
 
+#textOverflow
+{
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .sharePageHref
 {
   padding-left: 1em;
