--- a/style/index.css
+++ b/style/index.css
@@ -1275,8 +1275,8 @@ margin-right: 2%;
 
 #textOverflow
 {
-  display: flex;
-  flex-wrap: wrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .sharePageHref
