--- a/style/index.css
+++ b/style/index.css
@@ -1304,6 +1304,9 @@ margin-right: 2%;
   border-radius: 10px;
   width: 130px;
   height: 40px;
-  margin-left: 100px;
+  margin-left: 20px;
+  float: right;
   cursor: pointer;
+  margin-right: 10px;
+  margin-top: 207px;
 }
