--- a/style/index.css
+++ b/style/index.css
@@ -1257,9 +1257,15 @@ margin-right: 2%;
 
 .filePreview 
 {
-  height: 100%;
-  width: 50%;
+  height: 500px;
+  width: 600px;
   border: solid red;
+}
+
+.previewImage
+{
+  width: 400px;
+  float: right;
 }
 
 .sharePageBody
