--- a/style/index.css
+++ b/style/index.css
@@ -1252,11 +1252,15 @@ margin-right: 2%;
 {
   height: 500px;
   width: 600px;
+  border: solid var(--Orange);
 }
 
 .filePreview 
 {
   height: 500px;
+  border-right: solid var(--Orange);
+  border-top: solid var(--Orange);
+  border-bottom: solid var(--Orange);
 }
 
 .previewImage
