--- a/style/index.css
+++ b/style/index.css
@@ -1258,6 +1258,7 @@ margin-right: 2%;
 .filePreview 
 {
   height: 500px;
+  width: 400px;
   border-right: solid var(--Orange);
   border-top: solid var(--Orange);
   border-bottom: solid var(--Orange);
