--- a/style/index.css
+++ b/style/index.css
@@ -94,7 +94,7 @@ body
     margin-bottom: 50px;
 }
 
-.navBarUl
+/* .navBarUl
 {
 
     list-style: none;
@@ -106,7 +106,7 @@ body
     top: 0;
     width: 100%;
     z-index: 1;
-}
+} */
 
 .navBarA
 {
