--- a/style/index.css
+++ b/style/index.css
@@ -657,6 +657,10 @@ display: flex;
   height: 48px;
   width: auto;
 }
+.Twarning
+{
+  margin-left: 10px;
+}
 
 /*----------------About.php---------------------*/
 #altBorder{
